# Thursday

./: README.md  app.py  assistant.py  config.py  fix_reddit.sh  make_executable.sh  pollinations_api_docs.md  prompts.py  pyproject.toml  run.py  test_reddit.sh  utility.py
app/: __init__.py  initialization.py
app/routes/: __init__.py  chat_routes.py  main_routes.py  settings_routes.py
app/utils/: helpers.py  setup.py
assistant/: __init__.py  api_client.py  core.py  image_processor.py  save_patch.py  streaming.py  tool_handler.py  utils.py
config/: reddit_vpn.json
docs/: pollinations_api.md
func_to_schema/: __init__.py
scripts/: fix_reddit_auto.py  fix_reddit_connection.py  fix_reddit_hosts.py  reddit_vpn.py  test_reddit_tools.py  test_webpage_links.py  troubleshoot_reddit.py
static/: app.js  style.css
static/css/: base.css  font-info.css  layout.css  main.css  print.css  theme.css  utilities.css
static/css/components/: buttons.css  inputs.css  messages.css  messaging.css  modals.css  sidebar.css
static/css/components/messaging/: base.css  bubbles.css  buttons.css  (+10 more)
static/js/: app.js  debug-tools.js
static/js/components/: ConversationManager.js  ModelSelector.js  messaging.js  settings.js  sidebar.js  theme.js
static/js/utils/: BrowserStorageManager.js  api.js  dom.js  markdown.js  pdfExport.js
templates/: index.html
tests/: test_api_structure.py
tools/: __init__.py  filesys.py  filesystem.py  formatting.py  notes.py  plan.py  python_tools.py  reddit.py  system.py  thinking.py  utils.py  validation.py  web.py
utils/: provider_manager.py
(+5 files in other folders)
